# capstone-project

./: .gitignore  README.md
Application/: .project  build.gradle
Application/app/: build.gradle
Application/gradle/wrapper/: gradle-wrapper.properties
CapstonePrototype/: build.gradle  gradle.properties
CapstonePrototype/app/: build.gradle  google-services.json
Experimental-Codes/: bcksubtract.py  face-landmarks.py  face_detector.py  facial_landmarks.py  fhog.py  find_faces_agitegey.py  functionalized.py  intel-bcksubt.py  plot_iris_svc.py  project_faces.py  tribrid_v2.py
Extra/: 01_First-Review_Template.ppt  Review - 1.pptx  commands.txt
Facial Recognition/: .gitignore  checkfirebase.py  encodings.pickle  motion_detectorp3.py  motiondetect.py  pi_face_recognition.py
WebApp/: EmpOperations.html  EmpOperations.js  MonitoringPage.html  RoomOccupiedPage.html  connectiontofirebase.html  firebase-config.js  index.css  loginpract.html  loginpract.js  utils.js
data/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  015.txt  017.txt  020.txt  021.txt  024.txt  030.txt  031.txt  034.txt  035.txt  036.txt  037.txt  039.txt  040.txt  041.txt  042.txt  043.txt  044.txt  046.txt  047.txt  048.txt  050.txt  052.txt  053.txt  054.txt  055.txt  060.txt  061.txt  062.txt  (+312 more)
docs/: changes-and-pending.md  running-scripts.md
facial-recognition/: .env.example  encode_faces.py  encodings.pickle  pi_face_recognition.py  pyproject.toml
firecast/: .firebaserc
firecast/functions/: index.js  package-lock.json
(+44 files in other folders)
