[project]
name = "facial-recognition"
version = "0.1.0"
description = "Capstone Project – Facial Recognition module using OpenCV, dlib, and Firebase"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.9.0",
    "face-recognition>=1.3.0",
    "imutils>=0.5.4",
    "firebase-admin>=6.5.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    # setuptools<70 provides pkg_resources needed by face_recognition_models on Python 3.12+
    "setuptools<70",
]

# Tell uv this is a script-only project — don't try to build/install a wheel
[tool.uv]
package = false
